Lessons 6 and 7 (tentative)

--- a/CLIP.ipynb
+++ b/CLIP.ipynb
@@ -29,6 +29,7 @@
        "\\newcommand{\\X}{\\mathbf{X}}\n",
        "\\newcommand{\\KL}{\\mathbf{KL}}\n",
        "\\newcommand{\\E}{{\\mathbb{E}}}\n",
+       "\\newcommand{\\Reals}{{\\mathbb{R}}}\n",
        "\\newcommand{\\ip}{\\mathbf{{(i)}}}\n",
        "%\n",
        "% Test set\n",
@@ -48,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -70,7 +72,7 @@
        "\\newcommand{\\v}{\\mathbf{v}}\n",
        "\\newcommand{\\offset}{o}\n",
        "\\newcommand{\\o}{o}\n",
-       "\\newcommand{\\E}{\\mathbf{E}}\n",
+       "\\newcommand{\\Emb}{\\mathbf{E}}\n",
        "%\n",
        "%\n",
        "\\newcommand{\\loss}{\\mathcal{L}}\n",
@@ -83,6 +85,7 @@
        "% SVM\n",
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
+       "%\n",
        "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
@@ -103,10 +106,37 @@
        "\\def\\cnt#1{\\mathcal{count}_{#1}}\n",
        "\\def\\node#1{\\mathbb{#1}}\n",
        "%\n",
+       "\\def\\loc#1{{\\text{##} {#1}}}\n",
+       "%\n",
+       "\\def\\OrderOf#1{\\mathcal{O}\\left( #1 \\right)}\n",
+       "%\n",
+       "% Expectation operator\n",
+       "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
+       "%\n",
+       "% Reinforcement learning\n",
+       "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
+       "\\newcommand{\\actseq}{A}\n",
+       "\\newcommand{\\act}{a}\n",
+       "\\newcommand{\\States}{{\\mathcal{S}}}   \n",
+       "\\newcommand{\\stateseq}{S}  \n",
+       "\\newcommand{\\state}{s}\n",
+       "\\newcommand{\\Rewards}{{\\mathcal{R}}}\n",
+       "\\newcommand{\\rewseq}{R}\n",
+       "\\newcommand{\\rew}{r}\n",
+       "\\newcommand{\\transp}{P}\n",
+       "\\newcommand{\\statevalfun}{v}\n",
+       "\\newcommand{\\actvalfun}{q}\n",
+       "\\newcommand{\\disc}{\\gamma}\n",
+       "%\n",
+       "%\n",
        "\\newcommand{\\floor}[1]{\\left\\lfloor #1 \\right\\rfloor}\n",
        "\\newcommand{\\ceil}[1]{\\left\\lceil #1 \\right\\rceil}\n",
        "%\n",
-       "\\def\\loc#1{{\\text{##} {#1}}}\n",
        "%\n",
        "$$\n"
       ],
@@ -434,10 +464,11 @@
     "    - A deep layer of any Image Classifier\n",
     "- Text\n",
     "    - Simplest: Continuous Bag of Words (CBOW)\n",
+    "    - Final latent state of an RNN (Encoder)\n",
     "    - Transformer\n",
     "        - use latent representation of the special `<CLS>` token typically prepended to the sequence\n",
     "\n",
-    "There is not need to re-invent one just for CLIP.\n",
+    "There is no need to re-invent one just for CLIP.\n",
     "\n",
     "The authors report experiments with different Encoder choices.\n",
     "    - "
@@ -497,7 +528,7 @@
     "\n",
     "Suppose we have a single (Image, Text) pair $(I_i, T_i)$ from the set of $N$ training examples.\n",
     "\n",
-    "Our objective is to ensure that the similarity  dot product of vectors within common embedding space) is such that\n",
+    "Our objective is to ensure that the similarity  (dot product of vectors within common embedding space) is such that\n",
     "- $I_i \\cdot T_i$ is as large as possible\n",
     "- $I_i \\cdot T_j$ is as small as possible for $i \\ne j$\n",
     "\n",
@@ -783,8 +814,17 @@
     "\n",
     "The authors call this *prompt engineering* (i.e., creating new \"prompts\" for input.\n",
     "\n",
-    "They suggest that careful prompt engineering for each Target task can improve Zero shot classification.\n",
-    "\n",
+    "They suggest that careful prompt engineering for each Target task can improve Zero shot classification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "For example\n",
     "- converting a label (denoted by placeholder `{label}`) for a pet  to\n",
     " > A photo of a {label}, a type of pet\n",
@@ -801,7 +841,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1058,7 +1098,10 @@
     "\n",
     "    x = layers.Add()([projected_embeddings, x])\n",
     "\n",
-    "is implementing a skip connection."
+    "is implementing a skip connection.\n",
+    "- `projected_embeddings` that is input to the body of the loop\n",
+    "- skips over the body\n",
+    "- and is added to the updated (by the body) `projected_embeddings`"
    ]
   },
   {
@@ -1115,18 +1158,26 @@
    "source": [
     "# CLiP demo (HuggingFace)\n",
     "\n",
-    "You can use the Inference API to play with [CLiP on HuggingFace]."
+    "You can use the Inference API to play with [CLiP on HuggingFace](https://huggingface.co/openai/clip-vit-large-patch14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Done\")"
    ]
