--- a/DALL-E.ipynb
+++ b/DALL-E.ipynb
@@ -272,7 +272,7 @@
    },
    "source": [
     "A Text Encoder is used\n",
-    "- BPE encoding\n",
+    "- BPE encoding of tokens\n",
     "- Text Vocabulary size is $16,384$"
    ]
   },
@@ -307,7 +307,7 @@
     "- $1024$ Image tokens\n",
     "\n",
     "The Language Model learns to Autoregressively model the training sequences\n",
-    "- Using Decoder side of a Transformer"
+    "- Using Decoder style Transformer"
    ]
   },
   {
@@ -340,8 +340,11 @@
    },
    "source": [
     "A Language Model is not deterministic: running the same input multiple times can generate different outputs\n",
-    "- DALL-E uses CLIP to rank the outputs\n",
-    "    - CLIP finds the images that are the least distance from the Text"
+    "- LLM creates a probability distribution over token vocabulary\n",
+    "    - we *sample* a token from this distribution as the LLM \"next token\" output\n",
+    "    \n",
+    "DALL-E uses CLIP to rank the outputs\n",
+    "- CLIP finds the images that are the least distance from the Text"
    ]
   },
   {
@@ -462,6 +465,27 @@
     "\n",
     "- It gets the NYU colors right !\n",
     "    - Princeton professors wear orange"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
