--- a/Index_Advanced.ipynb
+++ b/Index_Advanced.ipynb
@@ -558,7 +558,7 @@
     }
    },
    "source": [
-    "# Week 6 (tentative)\n",
+    "# Week 6 \n",
     "\n",
     "GANs, continued\n",
     "\n",
@@ -612,6 +612,7 @@
     "[vanilla VQ-VAE](https://arxiv.org/pdf/1711.00937.pdf)\n",
     "\n",
     "[VQ-VAE-2 paper](https://arxiv.org/pdf/1906.00446.pdf)\n",
+    "\n",
     "## DALL-E: Mixing Text and Image\n",
     "\n",
     "We make use of the Quantized VAE technique we learned in the module on Autoencoders to enable us\n",
@@ -622,7 +623,31 @@
     "- [CLIP](CLIP.ipynb)\n",
     "    - [Zero shot learning, prompt engineering Colab notebook: PyTorch](https://github.com/openai/CLIP/blob/main/notebooks/Prompt_Engineering_for_ImageNet.ipynb)\n",
     "- [DALL-E](DALL-E.ipynb)\n",
-    "- [Vision Transformer](Vision_Transformer.ipynb)"
+    "- [Vision Transformer](Vision_Transformer.ipynb)\n",
+    "\n",
+    "**Suggested Reading**\n",
+    "- [CLIP paper](https://cdn.openai.com/papers/Learning_Transferable_Visual_Models_From_Natural_Language_Supervision.pdf)\n",
+    "- [DALL-E paper](https://arxiv.org/pdf/2102.12092.pdf)\n",
+    "\n",
+    "- [OpenAI DALL-E 2 announcement](https://openai.com/dall-e-2/)\n",
+    "- [Vision Transformer]([paper](https://arxiv.org/pdf/2010.11929.pdf)\n",
+    "- [LiT paper](https://arxiv.org/pdf/2111.07991.pdf)\n",
+    "\n",
+    "## Contrastive Learning Objective\n",
+    "\n",
+    "CLiP used a Contrastive Learning Objective\n",
+    "- find embeddings to \n",
+    "    - maximize similarity between related examples (e.g., image and the text that describes it)\n",
+    "    - minimize similarity between unrelated examples (e.g., image and text that *does not* describe it).\n",
+    "\n",
+    "CLiP used Binary Cross Entropy to meet the objective; we study a different approach.\n",
+    "\n",
+    "[Creating Embeddings for Similarity](Embeddings_similarity.ipynb)\n",
+    "\n",
+    "**Suggested Reading**\n",
+    "\n",
+    "- Triplet Loss: [FaceNet: A Unified Embedding for Face Recognition and Clustering](https://arxiv.org/pdf/1503.03832.pdf)\n",
+    "- Sentence BERT: [entence-BERT: Sentence Embeddings using Siamese BERT-Networks](https://arxiv.org/pdf/1908.10084.pdf))\n"
    ]
   },
   {
