--- a/TimeGAN_Generative.ipynb
+++ b/TimeGAN_Generative.ipynb
@@ -29,6 +29,7 @@
        "\\newcommand{\\X}{\\mathbf{X}}\n",
        "\\newcommand{\\KL}{\\mathbf{KL}}\n",
        "\\newcommand{\\E}{{\\mathbb{E}}}\n",
+       "\\newcommand{\\Reals}{{\\mathbb{R}}}\n",
        "\\newcommand{\\ip}{\\mathbf{{(i)}}}\n",
        "%\n",
        "% Test set\n",
@@ -48,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -70,7 +72,7 @@
        "\\newcommand{\\v}{\\mathbf{v}}\n",
        "\\newcommand{\\offset}{o}\n",
        "\\newcommand{\\o}{o}\n",
-       "\\newcommand{\\E}{\\mathbf{E}}\n",
+       "\\newcommand{\\Emb}{\\mathbf{E}}\n",
        "%\n",
        "%\n",
        "\\newcommand{\\loss}{\\mathcal{L}}\n",
@@ -83,6 +85,7 @@
        "% SVM\n",
        "\\newcommand{\\margin}{{\\mathbb{m}}}\n",
        "\\newcommand{\\lmk}{\\boldsymbol{\\ell}}\n",
+       "%\n",
        "%\n",
        "% Functions with arguments\n",
        "\\def\\xsy#1#2{#1^#2}\n",
@@ -103,10 +106,37 @@
        "\\def\\cnt#1{\\mathcal{count}_{#1}}\n",
        "\\def\\node#1{\\mathbb{#1}}\n",
        "%\n",
+       "\\def\\loc#1{{\\text{##} {#1}}}\n",
+       "%\n",
+       "\\def\\OrderOf#1{\\mathcal{O}\\left( #1 \\right)}\n",
+       "%\n",
+       "% Expectation operator\n",
+       "\\def\\Exp#1{\\underset{#1} {\\operatorname{\\mathbb{E}}} }\n",
+       "%\n",
+       "% VAE\n",
+       "\\def\\prs#1#2{\\mathcal{p}_{#2}(#1)}\n",
+       "\\def\\qr#1{\\mathcal{q}(#1)}\n",
+       "\\def\\qrs#1#2{\\mathcal{q}_{#2}(#1)}\n",
+       "%\n",
+       "% Reinforcement learning\n",
+       "\\newcommand{\\Actions}{{\\mathcal{A}}} \n",
+       "\\newcommand{\\actseq}{A}\n",
+       "\\newcommand{\\act}{a}\n",
+       "\\newcommand{\\States}{{\\mathcal{S}}}   \n",
+       "\\newcommand{\\stateseq}{S}  \n",
+       "\\newcommand{\\state}{s}\n",
+       "\\newcommand{\\Rewards}{{\\mathcal{R}}}\n",
+       "\\newcommand{\\rewseq}{R}\n",
+       "\\newcommand{\\rew}{r}\n",
+       "\\newcommand{\\transp}{P}\n",
+       "\\newcommand{\\statevalfun}{v}\n",
+       "\\newcommand{\\actvalfun}{q}\n",
+       "\\newcommand{\\disc}{\\gamma}\n",
+       "%\n",
+       "%\n",
        "\\newcommand{\\floor}[1]{\\left\\lfloor #1 \\right\\rfloor}\n",
        "\\newcommand{\\ceil}[1]{\\left\\lceil #1 \\right\\rceil}\n",
        "%\n",
-       "\\def\\loc#1{{\\text{##} {#1}}}\n",
        "%\n",
        "$$\n"
       ],
@@ -125,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
@@ -197,7 +227,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -211,8 +241,17 @@
     "- Generate synthetic $\\hat{\\x}_{(1)}, \\ldots \\hat{\\x}_{(T)}$\n",
     "- with both forms of consistency\n",
     "    - cross sectional between features at a fixed time $\\tt$: $\\hat{\\x}_{\\tp, j}$ and $\\hat{\\x}_{\\tp, j'}$\n",
-    "    - sequential (\"time series\") between the feature vectors at different time steps: $\\hat{\\x}_\\tp$ and $\\hat{\\x}_{(\\tt+1)}$\n",
-    "\n",
+    "    - sequential (\"time series\") between the feature vectors at different time steps: $\\hat{\\x}_\\tp$ and $\\hat{\\x}_{(\\tt+1)}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "Following the notation of the paper\n",
     "- we use Python-like notation for sequences\n",
     "\n",
@@ -252,9 +291,17 @@
     "- creates a predicted $\\hat\\x_{\\timess{1}{T}}$\n",
     "    - creates a single element $\\hat\\x_\\tp$ at a time\n",
     "    - generating $\\hat\\x_\\tp$ conditional on $\\hat{\\x}_{\\timess{1}{\\tt-1}}$\n",
-    "- creates a *Supervised Loss* which is added to the standard Generator Loss\n",
-    "\n",
-    "\n",
+    "- creates a *Supervised Loss* which is added to the standard Generator Loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The Supervised Loss enforces the sequence dynamic as a constraint on one step ahead elements of the sequence.\n",
     "\n",
     "Thus, the Generator is encouraged to produce sequences that\n",
@@ -275,8 +322,17 @@
     "Rather than having the Generator/Discriminator pair work on elements of $\\x_\\tp$\n",
     "- they both work on  reduced dimensional *encodings* of $\\x_\\tp$ denoted as $\\h_\\tp$\n",
     "- the reduced dimensional encoding  $\\h_\\tp$ is called an *embedding* of $\\x_\\tp$\n",
-    "    - same idea as word embeddings\n",
-    "\n",
+    "    - same idea as word embeddings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "The embedding is created by the *Embedder*\n",
     "- The Encoder half\n",
     "- of an Autoencoder (Encoder/Decoder pair)"
@@ -716,7 +772,7 @@
     "As you can see, $\\loss_S$ depends on the behavior of the Encoder side (`embedder`) of the Autoencoder.\n",
     "\n",
     "But just as we had an initial independent training of the Autoencoder\n",
-    "- we have an initial independent training of the Superviser\n",
+    "- we have an initial independent training of the Supervisor\n",
     "\n",
     "During joint training, we will use Loss functions that cause the weights\n",
     "of the `embedder` and `supervisor` to update together.\n"
@@ -785,7 +841,7 @@
    "source": [
     "The Discriminator Loss $\\loss_D$ is the (weighted, but we ignore the weights) sum\n",
     "$$\n",
-    "\\loss_D = \\text{D_loss_real} + \\text{D_loss_unsupervised} + \\text{D_loss_fake}\n",
+    "\\loss_D = \\text{D_loss_real} + \\text{D_loss_fake_e} + \\text{D_loss_fake}\n",
     "$$\n"
    ]
   },
@@ -1158,13 +1214,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Done\")"
    ]
