--- a/VQ_VAE_Generative.ipynb
+++ b/VQ_VAE_Generative.ipynb
@@ -49,6 +49,7 @@
        "\\newcommand{\\dim}{d}\n",
        "\\newcommand{\\idxspatial}{{\\text{idx}}}\n",
        "\\newcommand{\\summaxact}{\\text{max}}\n",
+       "\\newcommand{idxb}{\\mathbf{i}}\n",
        "%\n",
        "%\n",
        "\n",
@@ -920,6 +921,77 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Stop Gradient operator\n",
+    "\n",
+    "Some of the Loss terms will involve an operator that we have not yet seen:\n",
+    "- The `sg` operator is the *Stop Gradient* operator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The need for this operator stems from the Gradient Descent update process\n",
+    "- the partial derivative assumes \"everything else\" other than the denominator (variable being updated) remains constant\n",
+    "- if \"everything else\" *also* changes: the gradient update step may not reduce Loss\n",
+    "\n",
+    "But\n",
+    "- changing the Encoder parameters affects Encoder output $\\z_e(\\x)$\n",
+    "    - which may affect the Embeddings\n",
+    "\n",
+    "Similarly\n",
+    "- changing the Embeddings \"code book\" will affect the Encoder output (the key used for lookup in the code book)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "In addition\n",
+    "- Quantization (selecting a discrete code from the code book) **is not** differentiable\n",
+    "- \"hard\" rather than \"soft\" choice\n",
+    "\n",
+    "We need to be able to pass gradients backward through the non-differentiable operator.\n",
+    "\n",
+    "The Stop Gradient operator will facilitate all these cases."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "On the Forward Pass, it acts as an Identity operator\n",
+    "$$\n",
+    "\\text{sg}(\\x)  =  \\x\n",
+    "$$\n",
+    "\n",
+    "But on the Backward Pass of Backpropagation: *it stops the gradient* from flowing backwards\n",
+    "$$\n",
+    "\\frac{\\partial \\, \\text{sg}(\\x)}{\\partial \\y} =  0 \\text{  for all } \\y\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "subslide"
     }
    },
@@ -930,39 +1002,40 @@
     "- written to minimize the negative of the log likelihood, as usual\n",
     "$$\n",
     "\\pr{ \\x | \\z_q(\\x) } \n",
-    "$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The Decoder is responsible for the Reconstruction Loss (through the term $\\tilde{\\x}$)\n",
-    "- Straight Through Estimation (which we shall subsequently discuss)\n",
-    "- means the gradients from Decoder input $\\z_q(\\x)$ flows directly to Encoder outpput $\\z_e(\\x)$\n",
-    "- *without* affecting the Embeddings \n",
-    "    - i.e., the embedding $e_k \\in \\E$ (where $k  = q(\\z|\\x))$ is **not** affected by the Reconstruction Loss\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "Straight Through Estimation (discussed below) causes the gradient from Reconstruction Loss to \"by-pass\" $\\E$\n",
-    "- effectively, for the purpose of gradient/weight update: \n",
-    "$$\\z_q(\\x) = \\z_e(\\x)$$\n",
+    "$$\n",
     "\n",
-    "The role of the other Loss terms (e.g., Vector Quantizer Loss) are to ensure that the Embeddings $\\E$\n",
-    "get updated."
+    "It will serve to update parameters for the Encoder and Decoder."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "As we will see (section: \"Quantization is not differentiable\")\n",
+    "- during the backward pass \n",
+    "- the Loss gradient from the (quantized) Decoder input $\\z_q(\\x)$ \n",
+    "- flows directly to the (continuous) Encoder output $\\z_e(\\x)$\n",
+    "\n",
+    "Effectively, for the purpose of gradient/weight update due to Reconstruction Loss:\n",
+    "$$\\z_q(\\x) = \\z_e(\\x)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "So the Reconstruction Loss will **not** cause the code book embeddings to be updated\n",
+    "- update to the Encoder parameters thus satisfies \"all else being constant\" in that the Code book does not change\n",
+    "\n",
+    "The Code Book updates will be the job of the two other Loss terms."
    ]
   },
   {
@@ -976,6 +1049,7 @@
     "## Vector Quantization Loss\n",
     "\n",
     "The Vector Quantization Loss and Commitment Loss are similar.\n",
+    "- differ only in the placement of the Stop Gradient\n",
     "\n",
     "Vector Quantization Loss:\n",
     "\n",
@@ -985,8 +1059,10 @@
     "\n",
     "where `sg` is the *Stop Gradient* Operator (details to follow).\n",
     "\n",
-    "The purpose of the Vector Quantization Loss is to \"learn\" the Embedding (codebook) $\\codebook$\n",
-    "- by moving $e_k$ closer to Encoder output $\\z_e(\\x)$"
+    "The purpose of the Vector Quantization Loss is to update the Embedding (codebook) $\\codebook$\n",
+    "- by moving \"code\" $\\z_q({\\x}) = e_k$ closer to Encoder output $\\z_e(\\x)$\n",
+    "- assuming Encoder output is held constant\n",
+    "    - the stop-gradient on the Encoder output $\\z_e(\\x)$ prevents the Encoder output from being changed by the VQ Loss\n"
    ]
   },
   {
@@ -1006,8 +1082,24 @@
     "\n",
     "It is similar to the Vector Quantization loss except for the placement of the Stop Gradient operator.\n",
     "\n",
-    "It's purpose is ensure that the embeddings $\\E$ converge.\n",
-    "\n"
+    "The Stop Gradient in the Commitment Loss prevents a change in the Embeddings from affecting the Encoder weights (and thus, $z_e(\\x)$)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "The reason for the different placement of the Stop Gradient operators in the VQ and Commitment Loss terms\n",
+    "- there is a circular dependency\n",
+    "    - encoder output $\\z_e(\\x)$ is affected by the Code Book quantization $\\z_q(\\x)$\n",
+    "    - the Code Book quantization $\\z_q(\\x)$ is affected by the encoder output $\\z_e(\\x)$\n",
+    "\n",
+    "By holding one constant while updating the other\n",
+    "- we ensure that the embeddings $\\E$ converge."
    ]
   },
   {
@@ -1024,7 +1116,7 @@
     "\n",
     "$$\\begin{array} \\\\\n",
     "\\loss(\\x, \\decoder(\\e)) & = & || \\x − \\decoder(\\e)||_2^2 & \\text{Reconstruction Loss} \\\\\n",
-    "& & + ||\\text{sg}[\\encoder(x)] − \\e||_2^2  & \\text{VQ loss, codebook loss: train codebook } \\e \\\\\n",
+    "& & + ||\\text{sg}[\\encoder(\\x)] − \\e||_2^2  & \\text{VQ loss, codebook loss: train codebook } \\e \\\\\n",
     "& & + β||\\text{sg}[\\e] − \\encoder(\\x)||_2^2 & \\text{Commitment Loss: force } E(\\x) \\text{  to be close to codebook entries} \\\\\n",
     "& &\\text{where } \n",
     "\\e = \\z_q(\\x)\n",
@@ -1032,55 +1124,7 @@
     "$$\n",
     "\n",
     "Need the stop gradient operator $\\text{sg}$ to control the mutual dependence\n",
-    "- of $\\encoder(\\x)$ and $\\e$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    " # Stop Gradient operator\n",
-    " \n",
-    "The `sg` operator is the *Stop Gradient* operator.\n",
-    "\n",
-    "On the Forward Pass, it acts as an Identity operator\n",
-    "$$\n",
-    "\\text{sg}(\\x)  =  \\x\n",
-    "$$\n",
-    "\n",
-    "But on the Backward Pass of Backpropagation: *it stops the gradient* from flowing backwards\n",
-    "$$\n",
-    "\\frac{\\partial \\, \\text{sg}(\\x)}{\\partial \\y} =  0 \\text{  for all } \\y\n",
-    "$$\n",
-    "\n",
-    "Why is this operator necessary for the VQ-VAE ?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "The reason it appears in the Vector Quantization Loss and Commitment Loss\n",
-    "is to prevent a feedback loop\n",
-    "\n",
-    "- Encoder updating $\\z_e(\\x)$ reduces Reconstruction Loss *assuming* embeddings remain constant\n",
-    "- But changing Encoder output results in embeddings being updated\n",
-    "- So embeddings *do not* remain constant \n",
-    "- The net effect may not be a reduction in Reconstruction Loss\n",
-    "\n",
-    "The Stop Gradient of the Vector Quantization Loss prevents a change in the Encoder weights (and thus, $z_e(\\x)$) from affecting the embeddings.\n",
-    "\n",
-    "The Stop Gradient in the Commitment Loss prevents a change in the Embeddings from affecting the Encoder weights (and thus, $z_e(\\x)$).\n",
-    "\n",
-    "This prevents a feedback loop.\n"
+    "- of the Encoder output $\\encoder(\\x)$ and the chosen code $\\e$"
    ]
   },
   {
@@ -1171,13 +1215,28 @@
    "source": [
     "# Learning the distribution of latents\n",
     "\n",
+    "In order to generate examples\n",
+    "- we sample from the latents $\\z$\n",
+    "\n",
     "For a VAE, we assume a functional form for the prior distribution of latents  $\\qr{\\z}$\n",
-    "- a *convenient* choice is Normal.  See [our VAE module](VAE_Generative.ipynb#Choosing-$\\qr{\\z}$)\n",
+    "- a *convenient* choice is Normal.  See [our VAE module](VAE_Generative.ipynb#Choosing-$\\qr{\\z}$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "The authors of this paper want to *avoid an assumption of the prior distribution $\\qr{\\z}$*\n",
     "\n",
+    "Instead: they will *learn* the distribution\n",
+    "- through auto-regressive modeling of the sequence $\\z$\n",
+    "- when we flatten the spatial/temporal dimensions of $\\z_q(\\x)$, we get a sequence\n",
     "\n",
-    "The authors wish to do away with an assumption of the prior distribution $\\qr{\\z}$.\n",
-    "\n",
-    "Retaining spatial/temporal dimensions in $\\z_q(\\x)$ is key to achieving this goal.\n"
+    "Retaining spatial/temporal dimensions in $\\z_q(\\x)$ is key to achieving this goal."
    ]
   },
   {
