--- a/Vision_Transformer.ipynb
+++ b/Vision_Transformer.ipynb
@@ -319,7 +319,7 @@
     }
    },
    "source": [
-    "Instead: the spatial grid of $(1 \\times 1)$ pixels is decomposed into\n",
+    "Instead: the spatial grid of $(w \\times h)$ pixels is decomposed into\n",
     "- $(16 \\times 16)$ groups (called *patches*) of adjacent pixels\n",
     "- Total number of patches $T = \\frac{w * h}{16*16}$\n",
     "\n",
@@ -340,7 +340,7 @@
     "    - mapping is a *learned embedding** (just like word embeddings)\n",
     "\n",
     "The result of converting to patches followed by embedding is a sequence of image embeddings\n",
-    "- of length $T$\n",
+    "- of length $T$ (number of patches)\n",
     "- each element of length $d$"
    ]
   },
@@ -377,7 +377,7 @@
     "\n",
     "The CNN preserves the number of spatial dimensions\n",
     "- perhaps reducing their size, i.e., *down-sampling*\n",
-    "- to retain a spatially oriented grid of vectors (i.e., the vector formed by the channels at each spatial\n",
+    "- to retain a spatially oriented grid of vectors (i.e., the vector formed by the channels at each spatial location)\n",
     "- each vector is analogous to a \"patch\" of pixels\n",
     "    - but may have semantics (rather than just syntactic) content"
    ]
@@ -539,6 +539,27 @@
     "In deep layers: heads attend to far away ($120 \\approx 50\\%$ of width) pixels\n",
     "- For a CNN with kernel size $3$ and stride $1$ to have a receptive field of 120 pixels\n",
     "    - would need more than $58$ layers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Done\")"
    ]
   }
  ],
