Lessons 6 and 7 (tentative)

--- a/Mesh_TensorFlow.ipynb
+++ b/Mesh_TensorFlow.ipynb
@@ -526,11 +526,11 @@
     "#### Layout for model parallelism\n",
     "\n",
     "Alternatively, we can use a layout to implement *model parallelism*\n",
-    "- Any Tensor with a dimension named \"hidden\" is split\n",
-    "    - `hidden w1, w2`\n",
+    "- Any Tensor with a dimension named `hidden_dim`\n",
+    "    - `hidden, w1, w2`\n",
     "- is split across all devices (\"all_processors\")\n",
     "\n",
-    "        layout_rules=[(\"hidden\", \"all_processors\")]"
+    "        layout_rules=[(\"hidden_dim\", \"all_processors\")]"
    ]
   },
   {
@@ -678,7 +678,7 @@
     "    \n",
     "Thus\n",
     "- processor $0$ can compute the full $\\X$ times the first group of $\\W$\n",
-    "- processor $0$ can compute the full $\\X$ times the second group of $\\W$\n",
+    "- processor $1$ can compute the full $\\X$ times the second group of $\\W$\n",
     "- resulting in $\\h$ split across processors $0, 1$"
    ]
   },
@@ -729,7 +729,7 @@
     "- processor $2$ can compute second group of $\\X$ times first group of $\\W$\n",
     "- processor $3$ can compute second group of $\\X$ times second group of $\\W$\n",
     "\n",
-    "Note that result $\\h$ is split across **both*\n",
+    "Note that result $\\h$ is split across **both**\n",
     "- batch dimension (due to the data parallel split of $\\X$)\n",
     "- model dimension (due to model parallel split of $\\W$)"
    ]
